@@ -1,4 +1,3 @@
-
 @Book{Alb03,
   author    = {Alberty, Robert A.},
   publisher = {Wiley-Interscience},
@@ -47,6 +46,18 @@
   address   = {Heidelberg},
   doi       = {10.1007/978-3-642-46511-6},
   pages     = {397},
+}
+
+@Article{CBLM00,
+  author    = {Cooke, David R. and Bull, Stuart W. and Large, Ross R. and McGoldrick, Peter J.},
+  journal   = {Economic Geology},
+  title     = {The importance of oxidized brines for the formation of {A}ustralian {P}roterozoic stratiform sediment-hosted {P}b-{Z}n ({S}edex) deposits},
+  year      = {2000},
+  month     = jan,
+  number    = {1},
+  pages     = {1--17},
+  volume    = {95},
+  doi       = {10.2113/gsecongeo.95.1.1},
 }
 
 @Article{Dic08,
